# gacha

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: config.c  config.h  gacha.c  gacha.h  list.c  list.h  main.c  matcher.c  matcher.h  output.c  output.h  random.c  random.h
tests/: test_basic.sh
